# pyquist

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: sphinx.yml
docs/: conf.py  index.rst
docs/api/: audio.rst  device.rst  helper.rst  plot.rst  realtime.rst  score.rst  web.rst
docs/source/: modules.rst  pyquist.rst  pyquist.web.rst
examples/: HelloPyquist.ipynb
pyquist/: __init__.py  audio.py  audio_test.py  cli.py  core.py  device.py  device_test.py  helper.py  helper_test.py  note.py  notebook.py  paths.py  plot.py  plot_test.py  realtime.py  realtime_test.py  score.py  score_test.py  web.py
pyquist/web/: __init__.py  freesound.py  theorytab.py
